--- a/seki-web/static/css/controls.css
+++ b/seki-web/static/css/controls.css
@@ -69,11 +69,6 @@
   padding: 4px;
 }
 
-@media (min-width: 768px) {
-  .move-tree {
-    width: min(70vw, 70vh);
-  }
-}
 
 #confirm-move-btn {
   font-size: 2em;
